now fully compeleted

--- a/index.html
+++ b/index.html
@@ -740,7 +740,8 @@
 
             <ul>
                 <li>
-                    <h5>Contact Us
+                    <h5>Resources
+
 
                     </h5>
                 </li>
@@ -756,7 +757,7 @@
 
             <ul>
                 <li>
-                    <h5>Contact Us
+                    <h5>Company
 
                     </h5>
                 </li>
